--- a/d3-pipeline-chart/d3-pipeline-chart.html
+++ b/d3-pipeline-chart/d3-pipeline-chart.html
@@ -20,9 +20,9 @@
 
 	pipeline
 		.push(new pipelineChartStage({label: "Stage 1", value: 25, goal: 50, color: "#95B3D7"}))
-		.push(new pipelineChartStage({label: "Stage 2", value: 50, goal: 100, color: "#95B3D7"}));
-		.push(new pipelineChartStage({label: "Stage 3", value: 23, goal: 110, color: "#95B3D7"}));
-		.push(new pipelineChartStage({label: "Stage 4", value: 62, goal: 75, color: "#95B3D7"}));
+		.push(new pipelineChartStage({label: "Stage 2", value: 50, goal: 100, color: "#95B3D7"}))
+		.push(new pipelineChartStage({label: "Stage 3", value: 23, goal: 110, color: "#95B3D7"}))
+		.push(new pipelineChartStage({label: "Stage 4", value: 62, goal: 75, color: "#95B3D7"}))
 		.push(new pipelineChartStage({label: "Stage 5", value: 29, goal: 29, color: "#95B3D7"}));
 
 	pipeline.render();
